<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_rugby_scoring"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.rugby_scoring.RugbyScoring">

        <!-- scoreboard area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--home column of scoreboard area -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamStyle"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/home_text" />

                <TextView
                    style="@style/ScoreStyle"
                    android:id="@+id/home_score"
                    android:fontFamily="sans-serif-light"
                    android:text="0"/>

            </LinearLayout>

            <!--middle column of scoreboard area -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="36dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/rugby_ball_transparent_green_white" />
            </LinearLayout>

            <!--visitor column of scoreboard area -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamStyle"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/visitor_text"/>

                <TextView
                    style="@style/ScoreStyle"
                    android:id="@+id/visitor_score"
                    android:fontFamily="sans-serif-light"
                    android:text="0"/>

            </LinearLayout>

        </LinearLayout>

        <!-- separator -->
        <LinearLayout
            style="@style/separator">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gradientright" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gradientleft" />
        </LinearLayout>

        <!-- 5 point buttons area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonStyle"
                android:layout_marginLeft="36dp"
                android:onClick="add5Home"
                android:text="@string/five_points" />

            <TextView
                style="@style/MidTextStyle"
                android:text="@string/five_point_text" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginRight="36dp"
                android:onClick="add5Visitor"
                android:text="@string/five_points" />

        </LinearLayout>

        <!-- separator -->
        <LinearLayout
            style="@style/separator">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gradientright" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gradientleft" />
        </LinearLayout>

        <!-- 2 point buttons area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonStyle"
                android:layout_marginLeft="36dp"
                android:onClick="add2Home"
                android:text="@string/two_points" />

            <TextView
                style="@style/MidTextStyle"
                android:text="@string/two_point_text" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginRight="36dp"
                android:onClick="add2Visitor"
                android:text="@string/two_points" />

        </LinearLayout>

        <!-- separator -->
        <LinearLayout
            style="@style/separator">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gradientright" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gradientleft" />
        </LinearLayout>

        <!-- 3 point buttons area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonStyle"
                android:layout_marginLeft="36dp"
                android:onClick="add3Home"
                android:text="@string/three_points" />

            <TextView
                style="@style/MidTextStyle"
                android:text="@string/three_point_text" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginRight="36dp"
                android:onClick="add3Visitor"
                android:text="@string/three_points" />

        </LinearLayout>

        <!-- separator -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gradientright" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gradientleft" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/undo_warning"
            android:textSize="10sp" />

        <!-- undo button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_rounded_top"
            android:onClick="undoScore"
            android:padding="10dp"
            android:text="@string/undo"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <!-- reset button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_rounded_bottom"
            android:onClick="resetScore"
            android:padding="10dp"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>